<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>de.latlon.product.xplanbox</groupId>
  <artifactId>xplan-portal</artifactId>
  <packaging>pom</packaging>
  <version>2.6-SNAPSHOT</version>

  <properties>
    <java.version>1.7</java.version>
    <maven.version>3.0.3</maven.version>
    <!-- version properties -->
    <gwt.version>2.5.0</gwt.version>
    <geotools.version>10.0</geotools.version>
    <slf4j.version>1.7.5</slf4j.version>
    <geomajas-dep-version>1.13.12-latlon-SNAPSHOT</geomajas-dep-version>
    <!-- project properties -->
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <prerequisites>
    <maven>${maven.version}</maven>
  </prerequisites>

  <modules>
    <module>portal-bplan</module>
    <module>portal-fplan</module>
    <module>portal-lplan</module>
    <module>portal-bplan-config</module>
    <module>portal-fplan-config</module>
    <module>portal-lplan-config</module>
    <module>portal-documentation</module>
  </modules>

  <profiles>
    <profile>
      <id>include-test-config</id>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
      <dependencyManagement>
        <dependencies>
          <!-- internal -->
          <dependency>
            <groupId>${project.groupId}</groupId>
            <artifactId>portal-bplan-config</artifactId>
            <version>${project.version}</version>
          </dependency>
          <dependency>
            <groupId>${project.groupId}</groupId>
            <artifactId>portal-lplan-config</artifactId>
            <version>${project.version}</version>
          </dependency>
          <dependency>
            <groupId>${project.groupId}</groupId>
            <artifactId>portal-fplan-config</artifactId>
            <version>${project.version}</version>
          </dependency>
        </dependencies>
      </dependencyManagement>
    </profile>
  </profiles>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.1</version>
          <configuration>
            <source>${java.version}</source>
            <target>${java.version}</target>
            <encoding>utf8</encoding>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-release-plugin</artifactId>
          <version>2.5.3</version>
          <configuration>
            <preparationGoals>clean install</preparationGoals>
            <autoVersionSubmodules>true</autoVersionSubmodules>
            <releaseProfiles>release</releaseProfiles>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>2.17</version>
          <configuration>
            <excludes>
              <exclude>**/*IT*</exclude>
            </excludes>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>appassembler-maven-plugin</artifactId>
          <version>1.6</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-war-plugin</artifactId>
          <version>2.4</version>
        </plugin>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>gwt-maven-plugin</artifactId>
          <version>${gwt.version}</version>
          <configuration>
            <disableCastChecking>true</disableCastChecking>
            <disableClassMetadata>true</disableClassMetadata>
            <extraJvmArgs>-Xmx1200M -Xss1024k -XX:MaxPermSize=256M</extraJvmArgs>
            <module>${gwt.moduleName}</module>
            <runTarget>index.html</runTarget>
            <hostedWebapp>${project.build.directory}/${project.build.finalName}</hostedWebapp>
            <copyWebapp>true</copyWebapp>
          </configuration>
          <executions>
            <execution>
              <id>compile</id>
              <phase>test-compile</phase>
              <goals>
                <goal>compile</goal>
              </goals>
            </execution>
            <execution>
              <id>clean</id>
              <phase>clean</phase>
              <goals>
                <goal>clean</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>build-helper-maven-plugin</artifactId>
          <version>1.4</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-javadoc-plugin</artifactId>
          <version>2.9</version>
          <configuration>
            <failOnError>false</failOnError>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-deploy-plugin</artifactId>
          <version>2.7</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-source-plugin</artifactId>
          <version>2.2.1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-assembly-plugin</artifactId>
          <version>2.6</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-eclipse-plugin</artifactId>
          <version>2.9</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-failsafe-plugin</artifactId>
          <version>2.20</version>
          <configuration>
            <includes>
              <include>**/*IT*</include>
            </includes>
          </configuration>
          <executions>
            <execution>
              <goals>
                <goal>integration-test</goal>
                <goal>verify</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>org.apache.tomcat.maven</groupId>
          <artifactId>tomcat7-maven-plugin</artifactId>
          <version>2.2</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-enforcer-plugin</artifactId>
          <version>1.3.1</version>
          <executions>
            <execution>
              <id>enforce-versions</id>
              <goals>
                <goal>enforce</goal>
              </goals>
              <configuration>
                <rules>
                  <requireMavenVersion>
                    <version>${maven.version}</version>
                  </requireMavenVersion>
                  <requireJavaVersion>
                    <version>${java.version}</version>
                  </requireJavaVersion>
                </rules>
              </configuration>
            </execution>
          </executions>
        </plugin>
        <!-- jetty -->
        <plugin>
          <groupId>org.mortbay.jetty</groupId>
          <artifactId>maven-jetty-plugin</artifactId>
          <version>9.4.6.v20170531</version>
        </plugin>
        <!-- asciidoc -->
        <plugin>
          <groupId>org.asciidoctor</groupId>
          <artifactId>asciidoctor-maven-plugin</artifactId>
          <version>1.5.5</version>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>javax.validation</groupId>
        <artifactId>validation-api</artifactId>
        <version>1.1.0.Final</version>
      </dependency>
      <!-- geomajas -->
      <dependency>
        <groupId>org.geomajas</groupId>
        <artifactId>geomajas-dep</artifactId>
        <version>${geomajas-dep-version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>org.geomajas.plugin</groupId>
        <artifactId>geomajas-widget-layer-all</artifactId>
        <type>pom</type>
        <scope>import</scope>
        <version>1.0.0-latlon-SNAPSHOT</version>
      </dependency>
      <dependency>
        <groupId>org.geomajas.plugin</groupId>
        <artifactId>geomajas-plugin-wms-all</artifactId>
        <version>1.11.0-latlon-SNAPSHOT</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>org.geomajas.widget</groupId>
        <artifactId>geomajas-widget-featureinfo-gwt</artifactId>
        <version>1.0.0-latlon-SNAPSHOT</version>
      </dependency>
      <dependency>
        <groupId>org.geomajas.plugin</groupId>
        <artifactId>geomajas-layer-wms</artifactId>
        <version>1.11.0-latlon-SNAPSHOT</version>
      </dependency>
      <dependency>
        <groupId>org.geomajas.plugin</groupId>
        <artifactId>geomajas-layer-wms-gwt</artifactId>
        <version>1.11.0-latlon-SNAPSHOT</version>
      </dependency>
      <dependency>
        <groupId>org.geomajas.plugin</groupId>
        <artifactId>geomajas-widget-featureinfo-all</artifactId>
        <version>1.0.0-latlon-SNAPSHOT</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>org.geomajas.plugin</groupId>
        <artifactId>geomajas-widget-advancedviews-all</artifactId>
        <version>1.0.0-M3</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>org.geomajas.plugin</groupId>
        <artifactId>geomajas-widget-searchandfilter-all</artifactId>
        <version>1.0.0-latlon-SNAPSHOT</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>org.geomajas.plugin</groupId>
        <artifactId>geomajas-widget-utility-all</artifactId>
        <version>1.0.0-M4</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <!-- gwt -->
      <dependency>
        <groupId>com.google.gwt</groupId>
        <artifactId>gwt-user</artifactId>
        <version>${gwt.version}</version>
      </dependency>
      <dependency>
        <groupId>com.google.gwt</groupId>
        <artifactId>gwt-servlet</artifactId>
        <version>${gwt.version}</version>
      </dependency>
      <!-- logging dependencies, delegate all to slf4j and use logback -->
      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>slf4j-api</artifactId>
        <version>${slf4j.version}</version>
      </dependency>
      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>jcl-over-slf4j</artifactId>
        <version>${slf4j.version}</version>
      </dependency>
      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>log4j-over-slf4j</artifactId>
        <version>${slf4j.version}</version>
      </dependency>
      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>slf4j-log4j12</artifactId>
        <version>${slf4j.version}</version>
      </dependency>
      <!-- geotools -->
      <dependency>
        <groupId>org.geotools</groupId>
        <artifactId>gt-shapefile</artifactId>
        <version>${geotools.version}</version>
      </dependency>
      <dependency>
        <groupId>org.geotools</groupId>
        <artifactId>gt-epsg-hsql</artifactId>
        <version>${geotools.version}</version>
      </dependency>
      <dependency>
        <groupId>org.geotools</groupId>
        <artifactId>gt-data</artifactId>
        <version>${geotools.version}</version>
      </dependency>
      <dependency>
        <groupId>org.geotools</groupId>
        <artifactId>gt-wfs</artifactId>
        <version>${geotools.version}</version>
      </dependency>
      <dependency>
        <groupId>hsqldb</groupId>
        <artifactId>hsqldb</artifactId>
        <version>1.8.0.7</version>
        <scope>compile</scope>
      </dependency>
      <dependency>
        <groupId>net.sourceforge.htmlcleaner</groupId>
        <artifactId>htmlcleaner</artifactId>
        <version>2.5</version>
      </dependency>
      <!-- xerces -->
      <dependency>
        <groupId>xerces</groupId>
        <artifactId>xercesImpl</artifactId>
        <version>2.11.0</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <scm>
    <connection>scm:git:git@github.com:lat-lon/XPlanPortal.git</connection>
    <developerConnection>scm:git:git@github.com:lat-lon/XPlanPortal.git</developerConnection>
    <url>https://github.com/lat-lon/XPlanPortal</url>
    <tag>HEAD</tag>
  </scm>

  <repositories>
    <repository>
      <id>latlon-repository</id>
      <url>http://repo/nexus/content/groups/public/</url>
    </repository>
    <repository>
      <id>xplanbox-release</id>
      <url>http://repo/nexus/content/repositories/xplanbox-release/</url>
    </repository>
    <repository>
      <id>xplanbox-snapshot</id>
      <url>http://repo/nexus/content/repositories/xplanbox-snapshot/</url>
    </repository>
  </repositories>

  <pluginRepositories>
    <pluginRepository>
      <id>latlon-plugin-repository</id>
      <url>http://repo/nexus/content/groups/public/</url>
    </pluginRepository>
  </pluginRepositories>

  <distributionManagement>
    <repository>
      <id>xplanbox-release</id>
      <url>http://repo/nexus/content/repositories/xplanbox-release/</url>
    </repository>
    <snapshotRepository>
      <id>xplanbox-snapshot</id>
      <url>http://repo/nexus/content/repositories/xplanbox-snapshot/</url>
    </snapshotRepository>
  </distributionManagement>

  <licenses>
    <license>
      <name>GNU Affero General Public License Version 3, 19 November 2007</name>
      <url>http://www.gnu.org/licenses/agpl-3.0.en.html</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <issueManagement>
    <system>github</system>
    <url>https://github.com/lat-lon/XPlanPortal/issues/</url>
  </issueManagement>

  <developers>
    <developer>
      <name>lat/lon Support</name>
      <email>support@lat-lon.de</email>
    </developer>
  </developers>

</project>
